samples/_failures_safe/1761042800_929c84_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_992aec4b.c: In function ‘main’:
./samples/SAFE/__tmp_992aec4b.c:159:20: error: missing terminating " character
  159 |             printf("Invalid edge input\n
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_992aec4b.c:159:13: error: expected expression at end of input
  159 |             printf("Invalid edge input\n
      |             ^~~~~~
./samples/SAFE/__tmp_992aec4b.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992aec4b.c:159:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_992aec4b.c:159:13: error: expected declaration or statement at end of input
